# Debloat-Engine

./: .gitignore  AUTO_BUILD_GUIDE.md  Book1.xlsx  CLASSIFICATION_CONTROL_TRANSFER.md  CMakeLists.txt  CURRENT_PROBLEMS.md  DYNAMIC_CLASSIFICATION_IMPROVEMENTS.md  FIX_PLAN.md  PHASE1_README.md  PHASE2_README.md  PHASE3_README.md  PHASE4_README.md  PHASE5_README.md  PHASE6_README.md  PHASE7_README.md  PHASE8_COMPLETE.md  PHASE8_DYNAMIC_CLASSIFICATION.md  PROJECT_PROGRESS_REPORT.md  QUICK_REFERENCE.md  README.md  auto-build.bat  auto-build.ps1  auto_build_gui.bat  build.bat  imgui.ini  packages.md
build_cmake/: CMakeCache.txt
build_gui/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
include/: AdbManager.h  CommandExecutor.h  GuiApp.h  Logger.h  Package.h  PackageClassifier.h  PackageManager.h  RemovalEngine.h  UserInterface.h
src/: AdbManager.cpp  CommandExecutor.cpp  GuiApp.cpp  Logger.cpp  PackageClassifier.cpp  PackageManager.cpp  RemovalEngine.cpp  UserInterface.cpp  main.cpp  main_gui.cpp  main_production.cpp
